<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".BorrarActivity">



    <LinearLayout
        android:id="@+id/llm"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"


        >
        <EditText
            android:id="@+id/etIdM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:hint="@string/hint_et_id"
            />

        <Button
            android:id="@+id/btnBuscarM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hit_buscarM"
            android:onClick="BuscarM"
            >


        </Button>
    </LinearLayout>



    <EditText
        android:id="@+id/etNombreM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@id/llm"
        android:hint="@string/hint_et_nombre"
        android:enabled="false"
        />


    <EditText
        android:id="@+id/etModeloM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNombreM"
        android:layout_marginTop="13dp"
        android:enabled="false"
        android:hint="@string/hint_et_modelo" />

    <EditText
        android:id="@+id/etTamañoM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etModeloM"
        android:layout_marginTop="17dp"
        android:enabled="false"
        android:hint="@string/hint_et_Tamaño" />

    <EditText
        android:id="@+id/etProcesadorM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etTamañoM"
        android:layout_marginTop="18dp"
        android:enabled="false"
        android:hint="@string/hint_et_procesaadro" />

    <Button
        android:id="@+id/btnBorrarB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etProcesadorM"
        android:layout_marginTop="14dp"
        android:enabled="false"
        android:onClick="Borrar"
        android:text="@string/txBorrar" />

    <Button
        android:id="@+id/btnlimpiarB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBorrarB"
        android:layout_marginTop="6dp"
        android:enabled="false"
        android:onClick="LimpiarM"
        android:text="@string/limpiar" />


</RelativeLayout>