<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="20dp"
    tools:context=".OpcionesActivity">



    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txRegistar"
        android:onClick="registar"
        />
    <Button
        android:id="@+id/btnModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txModificar"
        android:onClick="modificar"
        android:layout_below="@id/btnRegistrar"
        />
    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txBorrar"
        android:onClick="Borrar"
        android:layout_below="@id/btnModificar"
        />
    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txConsultar"
        android:onClick="Consulrae"
        android:layout_below="@id/btnBorrar"
        />
    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConsultar"
        android:text="@string/texBienbenido"
        android:textAlignment="center"
        android:textColor="@color/color_hint"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBienUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBienvenido"
        android:textAlignment="center"
        android:textColor="@color/color_hint"
        android:textSize="30sp"
        android:textStyle="bold" />



</RelativeLayout>